--- a/app/globals.css
+++ b/app/globals.css
@@ -8,19 +8,52 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-playfair: var(--font-playfair);
+  /* --font-sans: var(--font-geist-sans);
+  --font-mono: var(--font-geist-mono); */
+  --font-secondary: var(--font-bodoni);
+
+  --color-primary: #c8b6a6; /* Soft Beige */
+  --color-secondary: #a4907c; /* Taupe */
+  --color-accent: #d4a373; /* Caramel CTA */
+  --color-dark: #1d1d1b; /* Coffee Brown */
+  --color-light: #f7f4f1; /* Classic Beige */
+  --color-bg: #f7f4f1;
+  --color-text-primary: #3e3e3e; /* Charcoal */
+
+  --color-coffee: #42342a;
+  --color-expresso-alt: #1e1713;
+  --color-expresso: #2c221d;
+}
+
+/* add to globals.css */
+@layer utilities {
+  .no-synth {
+    font-synthesis-weight: none;
+    font-synthesis-style: none;
+  }
+  .opsz-auto {
+    font-optical-sizing: auto;
+  } /* uses opsz axis when available */
+  /* If you want to force a big display size look (only works on variable font): */
+  .opsz-72 {
+    font-variation-settings: "opsz" 72;
+  }
+  .font-thin-render {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: var(--);
     --foreground: #ededed;
   }
 }
 
 body {
-  background: var(--background);
+  background: var(--color-bg);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
